2008-5-7  Yu-Sung Su     <ys463@columbia.edu>  
          Masanao Yajima <yajima@stat.columbia.edu>  
    * DESCRIPTION (Version, Date): 0.01-1.