@@ -1,5 +1,5 @@
 Package: R2jags
-Version: 0.01-9
+Version: 0.01-10
 Date: 2008-7-19
 Title: R2jags: A Package for Running jags from R
 Author: Yu-Sung Su <ys463@columbia.edu>,
